# auth0-export

./: .env.example  .gitignore  LICENSE  README.md  auth0_export.py  build.py  pyproject.toml  quickstart.sh
.github/workflows/: build-release.yml  test-build.yml
auth0_export/: __init__.py  cli.py  exporter.py
